<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_options"
	android:orientation="vertical"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<!--      <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/options"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
-->
        <Button
            android:id="@+id/scheduleBtn"
            android:layout_width="fill_parent"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
            android:layout_height="wrap_content"
            android:text="@string/scheduleLabel" />
    
		<Button
            android:id="@+id/recipientsBtn"
            android:layout_width="fill_parent"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
            android:layout_height="wrap_content"
            android:text="@string/recipientsLabel" />
        
		<Button
            android:id="@+id/reportsBtn"
            android:layout_width="fill_parent"
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
            android:layout_height="wrap_content"
            android:text="@string/reportsLabel" />
                


</LinearLayout>
